officialdoc/initcontainer.yml
apiVersion: v1
kind: Pod
metadata:
  name: myinitcontainer
  labels:
    app: myapp
spec:
  containers:
  - name: myinitpod
    image: busybox
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
