officialdoc/nginx-from-official-docs-output.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"nginx-from-official-docs","namespace":"default"},"spec":{"minReadySeconds":5,"selector":{"matchLabels":{"app":"myapp"}},"template":{"metadata":{"labels":{"app":"myapp"}},"spec":{"containers":[{"image":"nginx:1.7.9","name":"nginx-official-doc","ports":[{"containerPort":80}]}]}}}}
  creationTimestamp: 2018-11-01T18:19:53Z
  generation: 2
  name: nginx-from-official-docs
  namespace: default
  resourceVersion: "335636"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/nginx-from-official-docs
  uid: bac8f51e-de02-11e8-9e00-0a4ce1c3ba98
spec:
  minReadySeconds: 5
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: myapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myapp
    spec:
      containers:
      - image: nginx:1.7.9
        imagePullPolicy: IfNotPresent
        name: nginx-official-doc
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: 2018-11-01T18:19:53Z
    lastUpdateTime: 2018-11-01T18:20:09Z
    message: ReplicaSet "nginx-from-official-docs-78d9579fbb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: 2018-11-01T18:20:58Z
    lastUpdateTime: 2018-11-01T18:20:58Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
