officialdoc/podforvolume.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-ebs
spec:
  containers:
  - name: test-container
    image: k8s.gcr.io/test-webserver
    volumeMounts:
    - mountPath: /test-ebs
      name: test-volume
  volumes:
  - name: test-volume
    awsElasticBlockStorage:
      volumeID: <volume-id>
