officialdoc/selectingaspecificnode.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginxssd
  labels:
    env: test
spec:
  containers:
  - name: nginxforsssd
    image: nginx
    imagePullPolicy: IfNotPresent
  nodeSelector:
    disktype: ssd
