officialdoc/attachendpointtoservice.yml
kind: Endpoints
apiVersion: v1
metadata:
  name: endpointforservice
subsets:
  - addresses:
      - ip: 1.2.3.4
    ports:
      - port: 9376
