officialdoc/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9376
