officialdoc/servicewithoutselector.yml
kind: Service
apiVersion: v1
metadata:
  name: test-svc-noselector
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9376
